Fixed jumping text while focus on input

--- a/frontend/src/app/components/organization-list/organization-list.component.sass
+++ b/frontend/src/app/components/organization-list/organization-list.component.sass
@@ -6,6 +6,7 @@
   margin: 0 56px 0 56px
 
 .organization-top
+  margin: 3px 3px 0 0
   display: flex
   justify-content: space-between
 
