--- a/frontend/src/app/components/project-list/project-list.component.sass
+++ b/frontend/src/app/components/project-list/project-list.component.sass
@@ -7,6 +7,7 @@
 
 .project-top
   display: flex
+  margin: 3px 3px 0 0
   justify-content: space-between
 
 .projects-header
