--- a/frontend/src/shared/components/tasque-input/input.component.sass
+++ b/frontend/src/shared/components/tasque-input/input.component.sass
@@ -19,7 +19,7 @@
   background: colorscheme(gray-200)
   &:focus
     outline: none
-    border: 2px solid colorscheme(violet-200)
+    box-shadow: 0 0 0 2px colorscheme(violet-200)
     caret-color: colorscheme(violet-200)
 
 .input[readonly]
@@ -41,7 +41,7 @@
   background: colorscheme(gray-200)
   &:focus
     outline: none
-    border: 2px solid colorscheme(violet-200)
+    box-shadow: 0 0 0 2px colorscheme(violet-200)
     caret-color: colorscheme(violet-200)
 
 .mini-search-input
